<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/detail_item"
        android:icon="@drawable/ic_lichngay"
        android:title="@string/day"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:checked="false"/>

    <item
        android:id="@+id/month_item"
        android:icon="@drawable/ic_lichthang"
        android:title="@string/month"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:checked="false"/>

    <item
        android:id="@+id/change_day_item"
        android:icon="@drawable/ic_doingay"
        android:title="@string/changeDay"
        android:enabled="true"
        android:checked="false"/>
    <item
        android:id="@+id/more_item"
        android:icon="@drawable/ic_more"
        android:title="@string/more"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:checked="true"/>

</menu>
