<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativelayout_select_day"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SelectDayActvity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_select_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blacktransparent">
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/lable1_date_picker"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:background="@color/blacktransparent"
        android:text="@string/ngay_duong"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <DatePicker
        android:id="@+id/date_picker_top"
        android:layout_width="match_parent"
        android:layout_height="139dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lable1_date_picker"
        android:background="@color/blacktransparent"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:endYear="2030"
        android:startYear="1970"
        android:theme="@style/DatePicker">
    </DatePicker>

    <TextView
        android:id="@+id/lable2_date_picker"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@color/blacktransparent"
        android:text="@string/ngay_am"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <DatePicker
        android:id="@+id/da_picker_down"
        android:layout_width="match_parent"
        android:layout_height="139dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/lable2_date_picker"
        android:layout_marginBottom="166dp"
        android:background="@color/blacktransparent"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:theme="@style/DatePicker"
        android:endYear="2030"
        android:startYear="1970">

    </DatePicker>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation_select_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/blacktransparent"
        app:menu="@menu/bottom_navigation_menu"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white">
    </android.support.design.widget.BottomNavigationView>

    <Button
        android:id="@+id/go_to_day"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="@drawable/bg_button"
        android:text="@string/go_to_day"
        android:textColor="@color/white" />

</RelativeLayout>